@@ -73,3 +73,8 @@ BIOME_HEIGHT_RANGE_MAP = {  # an dict of biomename: height range storing the int
     "minecraft:plains": (10, 30)
 }
 
+
+# how far to generate chunks on sector change, in chunks from the chunk the player is in, in an square with
+# CHUNK_GENERATION_RANGE * 2 + 1 -size
+CHUNK_GENERATION_RANGE = 2
+
