@@ -12,6 +12,7 @@ import world.Dimension
 import world.Chunk
 import mod.ModMcpython
 import logger
+import util.math
 
 
 class WorldGenerationHandler:
@@ -22,6 +23,7 @@ class WorldGenerationHandler:
         self.enable_generation = False
         self.enable_auto_gen = False
         self.runtimegenerationcache = [[], {}, {}]  # chunk order, chunk state, chunk gen data
+        self.tasks_to_generate = []
 
     def add_chunk_to_generation_list(self, chunk, prior=False):
         if not self.enable_auto_gen: return
@@ -31,13 +33,20 @@ class WorldGenerationHandler:
                 self.runtimegenerationcache[0].remove(chunk)
             self.runtimegenerationcache[0].insert(0, chunk)
         elif chunk not in self.runtimegenerationcache[0]:
-            self.runtimegenerationcache[0].insert(-1, chunk)
-            self.runtimegenerationcache[1][chunk.position] = -1
-            self.runtimegenerationcache[2][chunk.position] = None
+            self.tasks_to_generate.append(chunk)
 
     def process_one_generation_task(self, chunk=None):
         if chunk is None:
-            if len(self.runtimegenerationcache[0]) == 0: return False
+            if len(self.runtimegenerationcache[0]) == 0:
+                cx, cz = util.math.sectorize(G.player.position)
+                for _ in range(min(len(self.tasks_to_generate), 4)):
+                    chunk = min(self.tasks_to_generate, key=lambda c: abs((c.position[0] - cx) * (c.position[1] - cz)))
+                    self.runtimegenerationcache[0].insert(-1, chunk)
+                    self.runtimegenerationcache[1][chunk.position] = -1
+                    self.runtimegenerationcache[2][chunk.position] = None
+                    return
+                if len(self.runtimegenerationcache[0]) == 0:
+                    return False
             chunk = self.runtimegenerationcache[0][0]
         if type(chunk) in (tuple, list, set): chunk = G.world.get_active_dimension().get_chunk(chunk)
         if chunk.position not in self.runtimegenerationcache[1]:
@@ -68,7 +77,7 @@ class WorldGenerationHandler:
             task = chunk.chunkgenerationtasks.pop(0)
             task[0](*task[1], **task[2])
             self.runtimegenerationcache[0].remove(chunk)
-            self.runtimegenerationcache[0].insert(-1, chunk)
+            self.runtimegenerationcache[0].insert(min(len(self.runtimegenerationcache[0])-1, 4), chunk)
         elif step == 2:  # process block additions to the chunk
             if len(chunk.blockmap) == 0:
                 self.runtimegenerationcache[1][chunk.position] = 3
@@ -78,7 +87,7 @@ class WorldGenerationHandler:
             del chunk.blockmap[position]
             chunk.add_block(*args, **kwargs)
             self.runtimegenerationcache[0].remove(chunk)
-            self.runtimegenerationcache[0].insert(-1, chunk)
+            self.runtimegenerationcache[0].insert(min(len(self.runtimegenerationcache[0])-1, 4), chunk)
         elif step == 3:  # process show tasks
             if len(chunk.show_tasks) == 0:
                 self.runtimegenerationcache[1][chunk.position] = 4
